<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearningActivity">

    <!-- word prompt should go here -->
    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_margin="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Straight line / separator -->
    <View
        android:id="@+id/separator"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- video answer -->
    <VideoView
        android:id="@+id/video"
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:layout_margin="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <View
        android:id="@+id/separator2"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/ratings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Rating buttons -->
    <LinearLayout
        android:id="@+id/ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/again"
            android:layout_width="90dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="@string/again"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/hard"
            android:layout_width="90dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/good"
            android:layout_width="90dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="@string/good"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/easy"
            android:layout_width="90dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:layout_gravity="center"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>