<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LearningActivity">

    <!-- Header w/ category label -->
    <!-- Video question to be hidden depending on card-->
    <VideoView
        android:id="@+id/video"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_margin="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/separator"/>

    <!-- Word question to be hidden depending on card -->
    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/separator" />

    <!-- Straight line / separator -->
    <View
        android:id="@+id/separator"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- answer should go here -->
    <TextView
        android:id="@+id/wordAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/separator"
        app:layout_constraintBottom_toTopOf="@+id/separator2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <VideoView
        android:id="@+id/videoAnswer"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_margin="40dp"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        app:layout_constraintBottom_toTopOf="@+id/separator2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        app:layout_constraintBottom_toTopOf="@+id/separator2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Second separator -->
    <View
        android:id="@+id/separator2"
        android:layout_width="350dp"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/ratings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Rating buttons -->
    <LinearLayout
        android:id="@+id/ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/again"
            android:layout_width="87dp"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:text="@string/again"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/hard"
            android:layout_width="87dp"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/good"
            android:layout_width="87dp"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:text="@string/good"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/easy"
            android:layout_width="87dp"
            android:layout_margin="2dp"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <!-- Reveal Buttons -->
    <Button
        android:id="@+id/reveal"
        android:layout_width="fill_parent"
        android:layout_margin="40dp"
        android:layout_height="wrap_content"
        android:text="@string/reveal"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator2"/>

</androidx.constraintlayout.widget.ConstraintLayout>