<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_pfp"
            android:orientation="vertical">
        <!-- HEADER -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcome"
            android:text="@string/home_welcome"
            android:textSize="30sp"
            android:textColor="@color/lavender" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:text="@string/user"
            android:textSize="60sp"
            android:textColor="@color/lavender"
            app:layout_constraintTop_toBottomOf="@id/welcome" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/user_pfp"
            android:layout_width="105dp"
            android:layout_height="105dp"
            app:layout_constraintStart_toEndOf="@+id/text"
            app:layout_constraintTop_toTopOf="@+id/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/row1"
            app:cardCornerRadius="250dp"
            app:cardBackgroundColor="@color/white">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="250dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/picture"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_picture" />

            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <!-- CARDS -->
        <!-- content: - words to learn today
                      - translate sentences
                      - streak [done]
                      - share (stats ?) on social media [done]
                      - set notification timing
                      - more stats, e.g. next card to review
                      - or recently searched words ?
                      - Achievements
                      - TODO think of more / reduce cards and adjust sizing
                      -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text">

            <androidx.cardview.widget.CardView
                android:id="@+id/streak"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Streaklabel"
                        android:text="Streak"
                        android:textSize="20sp"
                        android:textColor="@color/lavender"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/fireandstreak"/>

                    <LinearLayout
                        android:id="@+id/fireandstreak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="70dp"
                            android:id="@+id/fire"
                            android:src="@drawable/baseline_local_fire_department_24"
                            android:layout_marginTop="15dp"
                            android:contentDescription="fireVector" />

                        <TextView
                            android:id="@+id/streakNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="30sp"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:textColor="@color/lavender"
                            android:layout_marginTop="30dp"
                            android:layout_alignRight="@+id/fire"/>
                    </LinearLayout>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/socialMedia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackground"
                android:foreground="?attr/selectableItemBackground"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/elecName"
                        android:text="Share streak"
                        android:textSize="20sp"
                        android:textColor="@color/lavender"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/share"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="70dp"
                        android:id="@+id/share"
                        android:src="@drawable/baseline_share_24"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row2"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row1">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/achieve_label"
                        android:text="Achievements"
                        android:textSize="20sp"
                        android:textColor="@color/lavender"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/achieve_image"/>

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="70dp"
                        android:id="@+id/achieve_image"
                        android:src="@drawable/baseline_sports_score_24"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/beautyName"
                        android:text="Words Learnt"
                        android:textSize="20sp"
                        android:textColor="@color/lavender"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/beautyImage"/>
                    <!--
                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/beautyImage"
                        android:src="@drawable/ic_heart_border"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                    -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/beautyImage"
                        android:text="11"
                        android:textSize="50dp"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row3"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row2">

            <androidx.cardview.widget.CardView
                android:id="@+id/notifications"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_marginBottom="70dp"
                android:layout_weight="1"
                android:clickable="true"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp"
                android:focusable="true">

                <!-- TODO add checkbox so user can opt-in or not -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/notif_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Notifications"
                        android:textSize="20sp"
                        android:textColor="@color/lavender"
                        android:layout_marginTop="10dp"

                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/notif_image"/>

                    <ImageView
                        android:id="@+id/notif_image"
                        android:layout_width="45dp"
                        android:layout_height="70dp"
                        android:src="@drawable/baseline_notifications_active_24"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:layout_marginBottom="70dp"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/grocName"
                        android:text="Learn"
                        android:textSize="20sp"
                        android:textColor="@color/lavender"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/grocImage"/>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/grocImage"
                        android:src="@drawable/ic_heart_border"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>